# text-game

./: CMakeLists.txt  Makefile  README.md  spongebob-world.txt  world-load.txt  worldgen.py
include/: parser.hpp  room.hpp  world.hpp
src/: main.cpp  parser.cpp  world.cpp
